--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ flake8 = "^6.0.0"
 pytest = "^7.2.2"
 # docutils = "^0.17.1"
 marko = "^1.3.0"
+ghp-import = "^2.1.0"
+pydata-sphinx-theme = "^0.13.3"
 
 [build-system]
 requires = ["poetry-core"]
