docs(book): :memo: Add doc versioning capability

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -43,4 +43,9 @@ sphinx:
   config:
     add_module_names: False
     autosummary_generate: True
-    # html_theme: pydata_sphinx_theme
+    html_theme: pydata_sphinx_theme
+    html_theme_options:
+      switcher:
+        json_url: https://raw.githubusercontent.com/gusmann/applied-predictive-modeling/main/versions.json
+        version_match: 0.0.0
+      navbar_start: ["navbar-logo", "version-switcher"]
