--- a/book/_config.yml
+++ b/book/_config.yml
@@ -4,7 +4,7 @@
 title: Applied Predictive Modeling - in Python
 author: Gustavo Argote
 email: gustavo@403labs.io
-logo: static/logo.png
+logo: _static/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
