--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^7.2.2"
 # docutils = "^0.17.1"
 marko = "^1.3.0"
 ghp-import = "^2.1.0"
+sphinx-inline-tabs = "^2022.1.2b11"
 
 [build-system]
 requires = ["poetry-core"]
